--- a/css/flexstyle.css
+++ b/css/flexstyle.css
@@ -20,6 +20,7 @@ body{
     background-color: beige;
     color: black;
     font-size: 20px;
+    list-style: none;
 }
 
 .itembig {
@@ -33,15 +34,7 @@ body{
     padding:20px;
     border: 1px solid black;
     background-color: #555;
-    
-}
-nav ul{
-list-style-type: none;
-}
 
-nav ul li{
-    display: inline;
-    font-size: 25px;
 }
 
 header, footer, nav{
@@ -50,4 +43,22 @@ padding: 10px;
 text-align: center;
 margin: 5px;
 color: white;
+}
+
+.heading2{
+   text-align: center;
+   padding: 10px;
+   text-decoration: underline; 
+
+}
+form{
+    background-color: #c4c4c4;
+    padding: 10px;
+}
+
+nav{
+    background-color: #969696;
+    color: black;
+    font-weight: bold;
+    
 }
